k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: suplilist-prod
  labels:
    name: suplilist-prod
    app.kubernetes.io/instance: suplilist
---
apiVersion: v1
kind: Namespace
metadata:
  name: suplilist-staging
  labels:
    name: suplilist-staging
    app.kubernetes.io/instance: suplilist
